--- a/day2work/projects/project1.html
+++ b/day2work/projects/project1.html
@@ -8,21 +8,9 @@
 <body>
 <h1>This is your first project</h1>
 <ul>
-    <li >
-        <a href = ../index.html">
-            Home
-        </a>
-    </li>
-    <li >
-        <a href = "about.html">
-            About
-        </a>
-    </li>
-    <li >
-        <a href = "projects.html">
-            Projects
-        </a>
-    </li>
+    <li ><a href = "#">Home</a></li>
+    <li ><a href = "about.html">About</a></li>
+    <li ><a href = "projects.html">Projects</a></li>
 
 </ul>
 
