--- a/day2work/projects/project2.html
+++ b/day2work/projects/project2.html
@@ -8,28 +8,16 @@
 <body>
 <h1>This is your second project</h1>
 <ul>
-    <li >
-        <a href = ../index.html">
-            Home
-        </a>
-    </li>
-    <li >
-        <a href = "about.html">
-            About
-        </a>
-    </li>
-    <li >
-        <a href = "projects.html">
-            Projects
-        </a>
-    </li>
+    <li ><a href = "../index.html">Home</a></li>
+    <li><a href="../about.html">About</a></li>
+    <li><a href="projects.html">Projects</a></li>
 
 </ul>
 
 <ul>
-    <li><a href ="project1.html">Project 1</a></li>
-    <li><a href ="project2.html">Project 2</a></li>
-    <li><a href ="#">Project 3</a></li>
+    <li><a href="project1.html">Project 1</a></li>
+    <li><a href="project2.html">Project 2</a></li>
+    <li><a href="#">Project 3</a></li>
 </ul>
 
 <hl>project 2</hl>
